--- a/BARS-Client-V2.csproj
+++ b/BARS-Client-V2.csproj
@@ -18,7 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
-    <PackageReference Include="SimConnect.NET" Version="0.1.8-beta" />
+    <PackageReference Include="DiscordRichPresence" Version="1.6.1.70" />
+    <PackageReference Include="SimConnect.NET" Version="0.1.10-beta" />
   </ItemGroup>
 
   <ItemGroup>
