--- a/BARS-Client-V2.csproj
+++ b/BARS-Client-V2.csproj
@@ -8,10 +8,30 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>appicon.ico</ApplicationIcon>
+    <AssemblyName>BARS Client</AssemblyName>
+    <Name>BARS Client</Name>
+    <Version>2.0.0</Version>
+    <FileVersion>2.0.0</FileVersion>
+    <AssemblyVersion>2.0.0</AssemblyVersion>
+    <PackageId>BARS-Client</PackageId>
+    <!-- Deployment / Publish settings -->
+    <SelfContained>false</SelfContained>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <DebugType>none</DebugType>
+    <Deterministic>true</Deterministic>
+    <PublishTrimmed>false</PublishTrimmed>
+    <PublishSingleFile>false</PublishSingleFile>
+    <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
     <Content Include="appicon.ico" />
+  </ItemGroup>
+
+  <!-- Exclude PDB files from publish output explicitly (belt & suspenders) -->
+  <ItemGroup Condition="'$(Configuration)' == 'Release'">
+    <None Remove="**/*.pdb" />
   </ItemGroup>
 
   <ItemGroup>
